# chorus-detection-package

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  chorus-detection-CLI.py  docker-compose.yml  environment.yml  example.py  pyproject.toml  requirements.txt  setup.py
chorus_detection/: __init__.py
chorus_detection/cli/: cli_app.py
chorus_detection/core/: __init__.py  audio_processor.py  model.py  model_torch.py  utils.py  wrapper.py
cli/: __init__.py  cli_app.py
core/: __init__.py  audio_processor.py  model.py  utils.py  visualization.py
data/: negative_features_report.csv
notebooks/: Agglomerative-Clustering.ipynb  Automated-Chorus-Detection-V2.ipynb  Automated-Chorus-Detection.ipynb
src/: chorus_finder.py
src/chorus_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py
web/: __init__.py  app.py
